--- a/style.css
+++ b/style.css
@@ -31,8 +31,10 @@ body {
 .right-card{
   width: 350px;
   max-width: 400px;
+  height 580px
   display: flex;
-  justify-content:;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: stretch;
 }
 
@@ -67,7 +69,7 @@ body {
 
 .card img {
   width: 100%;
-  max-height: 275px;
+  max-height: 225px;
   object-fit: cover;}
 
 .footer {
