--- a/style.css
+++ b/style.css
@@ -35,12 +35,11 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: stretch;
 }
 
 .card {
   width: 500px;
-  height: 950px;
+  height: 750px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -69,6 +68,7 @@ body {
 
 .card img {
   width: 100%;
+  height: 225px;
   max-height: 225px;
   object-fit: cover;}
 
@@ -92,7 +92,9 @@ button {
   color: #333;
   font-size: 22px;
   cursor: pointer;
-  margin: 5px;
+  margin-bottom: 10px;
+  align-item: center;
+  text-align: center;
 }
 
 .refresh-btn {
