--- a/style.css
+++ b/style.css
@@ -22,26 +22,21 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: flex-start;
+  align-items: stretch;
   gap: 20px;
   margin: 20px;
 }
 .left-card,
 .intro-card,
 .right-card{
-  width: 350px;
-  max-width: 400px;
+  max-width: 300px;
   display: flex;
   justify-content:;
-  align-items: stretch;
 }
 
 .card {
-  width: 330px;
-  height: 580px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  width: 300px;
+  height: 1000px;
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -52,11 +47,10 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    flex-grow: 1;
-    height:70%;
+    height:100%;
   padding: 20px;
   font-family: "Verdana";
-  color: #444;
+  color: #777;
 }
 
 .card-content h2 {
@@ -67,8 +61,7 @@ body {
 
 .card img {
   width: 100%;
-  height: 160px;
-  object-fit: cover;
+  height: auto;
 }
 
 .footer {
@@ -95,18 +88,17 @@ button {
 }
 
 .refresh-btn {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
+    margin-top: auto;
+    margin-bottom: 75px;
     background-color: #f5f5dc;
     color: #333;
-    border: 3px solid #8A9A5B;
-    padding: 10px 0;
+    border: 4px solid #ccc;
+    padding: 10px 15px;
     font-weight: bold;
-    border-radius: 0 0 10px 10px;
+    border-radius: 10px;
     cursor: pointer;
-    text-align: center;
+    width: 100%;
+    
 }
 
 #card-container {
