--- a/style.css
+++ b/style.css
@@ -47,8 +47,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height:100%;
-  padding: 20px;
+  height: calc(100%-30px);
+  padding: 10px;
   font-family: "Verdana";
   color: #777;
 }
@@ -61,7 +61,7 @@ body {
 
 .card img {
   width: 100%;
-  height: auto;
+  height: 140px;
 }
 
 .footer {
