--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 
 .card {
   width: 500px;
-  height: 1000px;
+  height: 800px;
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -50,6 +50,7 @@ body {
   height: calc(100%-30px);
   padding: 10px;
   font-family: "Verdana";
+  font-size: 0.85rem;
   color: #777;
 }
 
@@ -61,7 +62,8 @@ body {
 
 .card img {
   width: 100%;
-  height: 140px;
+  max-height: 100px;
+  object-fit: cover;
 }
 
 .footer {
