--- a/style.css
+++ b/style.css
@@ -29,13 +29,14 @@ body {
 .left-card,
 .intro-card,
 .right-card{
-  width: 300px;
+  width: 400px;
+  height: 600px;
   display: flex;
   justify-content:;
 }
 
 .card {
-  width: 700px;
+  width: 300px;
   height: 600px;
   border: 1px solid #ccc;
   border-radius: 5px;
