--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
 
 .card img {
   width: 100%;
-  max-height: 120px;
+  max-height: 170px;
   object-fit: cover;
 }
 
@@ -92,7 +92,7 @@ button {
 }
 
 .refresh-btn {
-    margin-top: auto;
+    margin-top: 10px;
     margin-bottom: 75px;
     background-color: #f5f5dc;
     color: #333;
