--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 
 .card {
   width: 350px;
-  height: 800px;
+  height: 575px;
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -63,9 +63,9 @@ body {
 }
 
 .card img {
-  width: 100%;
+  display: block;
   max-height: 140px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .footer {
