--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .main-header {
-  background-color: #000000;
+  background-color: #8A9A5B;
   padding-bottom: 10px;
 }
 
@@ -35,7 +35,7 @@ body {
 
 .card {
     width: 350px;
-    height: 925px;
+    height: 850px;
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
