--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 
 .card {
     width: 350px;
-    height: 725px;
+    height: 700px;
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -100,6 +100,9 @@ button {
     border-radius: 10px;
     cursor: pointer;
     width: 100%;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     justify-content: center;
     align-items: center;
