--- a/style.css
+++ b/style.css
@@ -90,15 +90,13 @@ button {
 }
 
 .refresh-btn {
-    position:absolute;
-    bottom:20px;
-    margin: 2px;
     background-color: #f5f5dc;
     color: #333;
     border: 3px solid #8A9A5B;
     padding: 10px 15px;
     font-weight: bold;
     border-radius: 10px;
+    cursor: pointer;
     width: 100%;
     display: flex;
     justify-content: center;
