--- a/style.css
+++ b/style.css
@@ -22,9 +22,9 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: stretch;
+  align-items: flex-start;
   gap: 20px;
-  margin: 20px;
+  margin: 20px auto;
 }
 .left-card,
 .intro-card,
@@ -34,7 +34,7 @@ body {
 }
 
 .card {
-  width: clamp(220px, 30%, 300px);
+  width: clamp(260px, 30%, 300px);
   min-height: 650px;
   height: auto;
   border: 1px solid #ccc;
