--- a/style.css
+++ b/style.css
@@ -18,7 +18,20 @@ body {
   color: white;
 }
 
-
+.three-card-layout {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 40px;
+  margin: 20px auto;
+}
+.left-card,
+.intro-card,
+.right-card{
+  display: flex;
+  justify-content:;
+}
 
 .card {
   width: clamp(260px, 30%, 300px);
