--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 }
 
 .card {
-  width: clamp(375px, 375px, 375px);
+  width: 4245;
   min-height: 700px;
   height: auto;
   border: 1px solid #ccc;
@@ -64,7 +64,7 @@ body {
 
 .card img {
   display: block;
-  width: 100%
+  width: 100%;
   height: 140px;
   object-fit: contain;
 }
@@ -237,8 +237,4 @@ button {
   display: inline-block;
 }
 
-@media (max-width: 1200px) {
-  .catalog-page .card {
-    width: clamp(220px, 30%, 280px);
-  }
-}
+
