--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 }
 
 .card {
-  width: 4245;
+  width: 425;
   min-height: 700px;
   height: auto;
   border: 1px solid #ccc;
@@ -64,7 +64,7 @@ body {
 
 .card img {
   display: block;
-  width: 100%;
+  width: 250px;
   height: 140px;
   object-fit: contain;
 }
