--- a/style.css
+++ b/style.css
@@ -64,9 +64,12 @@ body {
 
 .card img {
   display: block;
-  width: 160px;
-  height: 250px;
-  object-fit: contain;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  height: 350px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .footer {
