--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ body {
   align-items: flex-start;
   gap: 20px;
   margin: 15px auto;
+  max-width: 1200px;
+  width: 100%;
 }
 .left-card,
 .intro-card,
@@ -33,8 +35,7 @@ body {
 }
 
 .card {
-  width: 600px;
-  min-height:650px;
+  width: clamp(350px, 30%, 600px);
   height: auto;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -66,7 +67,7 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 350px;
+  width: 80%;
   height: 250px;
   object-fit: cover;
   object-position: center;
@@ -241,6 +242,6 @@ button {
 }
 
 .catalog-page .card img {
-  width: 250px;
+  width: 80%;
   height: 125px;
 }
