--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 }
 
 .card {
-  width: clamp(350px, 30%, 600px);
+  width: 350px;
   height: auto;
   border: 1px solid #ccc;
   border-radius: 5px;
